Fixed Small css problem with wrong size of "home" link hover size.

--- a/src/main/webapp/sass/_navbar.scss
+++ b/src/main/webapp/sass/_navbar.scss
@@ -24,7 +24,7 @@ $H2:#fff;
 
 .topnav .topnav-header a {
     float: left;
-    padding: 20px 178px 20px 20px;
+    padding: 25px 178px 25px 21px;
     background: #6d7fcc;
 }
 
